gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "34.16.39.176.nip.io"
  - name: https
    hostname: "34.16.39.176.nip.io"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: app-tls
        kind: Secret
        group: ""
  - name: argo-http
    port: 80
    protocol: HTTP
    hostname: "34.16.39.176.nip.io.argo.com"
  - name: argo-https
    hostname: "34.16.39.176.nip.io.argo.com"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: argo-tls
        kind: Secret
        group: ""
